--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,7 +30,7 @@
           <p> Oh yeah, did we mention it's free?
         </p>
         <a>
-          <img src="images/badge-iphone.png" alt="" />
+          <img id="iphoneIcon" src="images/badge-iphone.png" alt="" />
         </a>
         <a>
           <img src="images/badge-android.png" alt="" />
@@ -50,7 +50,7 @@
         <li>Jobs</li>
         <li>Privacy</li>
         <li>Terms</li>
-        <li>&copy; 2014 Instagram</li>
+        <li id="grayFooter">&copy; 2014 Instagram</li>
       </ul>
     </footer>
   </body>
