--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <link rel="stylesheet" href="css/main.css" />
-  
 
   <head>
     <title>Instagram</title>
@@ -11,35 +10,32 @@
     <section class="flexAll">
       <img src="images/phones.png" alt="" />
       <div class="flexContentButton">
-      <div class="flexButtonLogo">
-        <div><img class="logoImg" src="images/brand.png" alt="" /></div>
-        <button>
-          <div><img src="images/home.png" alt="" /></div>
-          <span>Log in</span>
-        </button>
+        <div class="flexButtonLogo">
+          <div><img class="logoImg" src="images/brand.png" alt="" /></div>
+          <button>
+            <div><img src="images/home.png" alt="" /></div>
+            <span>Log in</span>
+          </button>
+        </div>
+        <div class="content">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <span> fast, beautiful </span>and
+            <span> fun </span>way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <a><img id="iphoneIcon" src="images/badge-iphone.png" alt=""/></a>
+          <a><img src="images/badge-android.png" alt=""/></a>
+        </div>
       </div>
-      <div class="content">
-        <h1>Capture and Share the World's Moments</h1>
-        <p>
-          Instagram is a <span> fast, beautiful </span>and <span> fun </span>way
-          to share your life with friends and family. </p>
-          <p> Take a picture or video,
-          choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter,
-          Tumblr and more. It's a new way to see the world. </p>
-          <p> Oh yeah, did we mention it's free?
-        </p>
-        <a>
-          <img id="iphoneIcon" src="images/badge-iphone.png" alt="" />
-        </a>
-        <a>
-          <img src="images/badge-android.png" alt="" />
-        </a>
-      </div>
-      </div>
-      </section>
-      </div>
-    </div>
+    </section>
+
     <footer>
       <ul>
         <li>About Us</li>
