--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <img src="./images/brand.png" alt="Instagram Brand">
+  <input type="button" value="Log in">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>
+    Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life
+    with friends and family.
+  </p>
 
-  Oh yeah, did we mention it's free?
+  <p>
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+    easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </p>
+  <p>
+    Oh yeah, did we mention it's free?
+  </p>
 
-  Download on the App Store
-  Get it on Google Play
+  <a href="https://apps.apple.com/br/app/instagram/id389801252"><img src="./images/badge-iphone.png" alt="Iphone Badge"></a> 
+   <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=pt_BR"><img src="./images/badge-android.png" alt="Android Badge"></a>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  <footer>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
