Finalizado com responsividade

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,44 +2,73 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instagram</title>
   <link rel="stylesheet" href="./css/main.css">
+
+
 </head>
 
 <body>
 
-  <img src="./images/brand.png" alt="Instagram Brand">
-  <input type="button" value="Log in">
+  <div class="flex-box">
+    <img src="./images/phones.png" alt="Phone">
+    <div class="flex-box-2">
+      <div class="flex-box-3">
+        <img src="./images/brand.png" alt="Instagram Brand">
+        <div class="flex-box-7">
+          <img src="./images/home.png" alt="">
+          <input type="button" value="Log in">
+        </div>
+      </div>
 
-  <h2>Capture and Share the World's Moments</h2>
+      <div class="flex-box-4">
+        <h2>Capture and Share<br> the World's Moments</h2>
 
-  <p>
-    Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life
-    with friends and family.
-  </p>
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+          life
+          with friends and family.
+        </p>
 
-  <p>
-    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
-    easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-  </p>
-  <p>
-    Oh yeah, did we mention it's free?
-  </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
 
-  <a href="https://apps.apple.com/br/app/instagram/id389801252"><img src="./images/badge-iphone.png" alt="Iphone Badge"></a> 
-   <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=pt_BR"><img src="./images/badge-android.png" alt="Android Badge"></a>
-
+        <div class="flex-box-5">
+          <a href="https://apps.apple.com/br/app/instagram/id389801252"><img src="./images/badge-iphone.png"
+              alt="Iphone Badge"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=pt_BR"><img
+              src="./images/badge-android.png" alt="Android Badge"></a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer>
-    <a href="#">About Us</a>
-    <a href="#">Support</a>
-    <a href="#">Blog</a>
-    <a href="#">Press</a>
-    <a href="#">API</a>
-    <a href="#">Jobs</a>
-    <a href="#">Privacy</a>
-    <a href="#">Terms</a>
-    &copy; 2014 Instagram
+    <div class="flex-box-6">
+      <span>
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+      </span>
+      <span>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+      </span>
+    </div>
+    <span>
+      <p>&copy; 2014 Instagram</p>
+    </span>
   </footer>
 </body>
 
