--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="bigdiv">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <!-- div imagem -->
+    <div class="firstdiv">
+      <img src="./images/phones.png" alt="">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <!-- div imagem, log in, texto e imagens -->
+    <div class="seconddiv">
+      <!-- div logo e log int -->
+      <div class="logo">
+        <img src="./images/brand.png">
 
-  Oh yeah, did we mention it's free?
+        <nav>
+          <button class="home" name="button"><img src="./images/home.png"> Log in</button>
+        </nav>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <!-- div texto -->
+      <div class="text">
+        <h1>
+          Capture and Share <br> the World's Moments
+        </h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life <br> with friends and family. <br>
 
-  &copy; 2014 Instagram
+          Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash;
+          it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the
+          world.
+
+          Oh yeah, did we mention it's free?
+        </p>
+
+      </div>
+
+      <!-- div fotos -->
+      <div class="images">
+        <img src="./images/badge-iphone.png" alt="">
+        <img src="./images/badge-android.png" alt="">
+      </div>
+   </div> 
+
+</div>
+
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        &copy; 2014 Instagram
+      </ul>
+    </footer>
+
 </body>
+
 </html>
