--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="center">
+    <main>
+      <section class="container">
+        <img class="phone-img" src="./images/phones.png" alt="Phone app">
+        <div class="text-btn">
+          <div class="logo-btn">
+            <a href="#"><img class="insta-logo" src="../starter-code/images/brand.png" alt="Instagram logo"></a>
+            <div class="btn-login">
+              <a class="home-img-border" href="#"><img class="home-img" src="./images/home.png" alt="Login button"></a>
+              <a class="login-btn" href="#">Log in</a>
+            </div>
+          </div>
+          <div class="text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; 
+              it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            
+            <a href="#"><img class="apple" src="../starter-code/images/badge-iphone.png" alt="Apple store button"></a>
+            <a href="#"><img class="android" src="./images/badge-android.png" alt="Android store button"></a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <div class="nav-group">
+          <span class="nav-li-1">
+            <li><a class="nav-button" href="#">About Us</a></li>
+            <li><a class="nav-button" href="#">Spport</a></li>
+            <li><a class="nav-button" href="#">Blog</a></li>
+            <li><a class="nav-button" href="#">Press</a></li>
+          </span>
+          <span class="nav-li-2">
+            <li><a class="nav-button" href="#">API</a></li>
+            <li><a class="nav-button" href="#">Jobs</a></li>
+            <li><a class="nav-button" href="#">Privacy</a></li>
+            <li><a class="nav-button" href="#">Terms</a></li>
+          </span>
+        </div>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
