--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css">
+  </head>
+  <body>
+    <div class="section">
+      <div class="iphone-img">
+        <img src="./images/phones.png" alt="" />
+      </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      <div class="main">
+        <header>
+          <img src="./images/brand.png" alt="" />
+          <button class="btn-login">
+            <img src="./images/home.png" alt="">
+            <a href="">Log in</a>
+          </button>
+          
+        </header>
+        <div class="main-info">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun  </strong> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="download-btn">
+            <img src="./images/badge-iphone.png" alt="" />
+            <img src="./images/badge-android.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-items">
+        <a href="">About us</a>
+        <a href="">Support</a>
+        <a href="">Blog</a>
+        <a href="">Press</a>
+        <a href="">API</a>
+        <a href="">Jobs</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
+      </div>
+      <div class="footer-copyright">
+        &copy; 2014 Instagram
+      </div>
+    </footer>
+  </body>
 </html>
