--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,73 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
+
+<link rel="stylesheet" href="css/main.css">
+
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
+<div class="sec1">
+
+  
+    <img class="iphone" src="images/phones.png" alt="iphone">
+  
+
+<div class="elem3">
+
+<div class="log">
+  <div class="brand">
+  <img src="images/brand.png" alt="Instagram logo"> 
+  </div>
+  <div class="home">
+  <button><img src="images/home.png" alt="log"><b>Log in</b></button>
+  </div>
+</div>  
+
+<div class="textImg">
+  <div class="text">
+  <h1>Capture and Share the World's Moments</h1>
+
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+    <br>
+    <br>
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <br>
+    <br>
+  Oh yeah, did we mention it's free?</p>
+</div>
+</div>
 
-  Oh yeah, did we mention it's free?
+<div class="app">
+  <img class="small" src="images/badge-iphone.png" alt="apple store"> 
+  <img class="small" src="images/badge-android.png" alt="Google Play">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
 
-  &copy; 2014 Instagram
+<div class="links">
+  <nav>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>  
+</nav>
+
+  <div class="copy"><grey>&copy; 2014 Instagram</div>
+</div>
+ 
 </body>
 </html>
