--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,18 +2,67 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
-  Instagram
+  
+<div id="main-box">
+  <!-- IPHONE IMAGE -->
+  <div >
+    <img id="phone" src="./images/phones.png" alt="iphone picture">
+  </div>
 
-  Capture and Share the World's Moments
+  <!-- HEADER + TEXT BOX -->
+  <div id="information">
+    <div id="header">
+        <div id="insta-logo">
+          <img src="./images/brand.png" alt="Instagram logo">
+        </div>
+        <div id="login">
+          <img src="./images/home.png" alt="home image">
+          <a href="#">Log In</a>
+        </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <!-- TEXT BOX -->
+    <div id="text-box">
+      <h1> Capture and Share <br> the World's Moments </h1>
+      <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>    
+      <p> Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div id="stores-btn">
+        <img src="./images/badge-iphone.png" alt="App store button">
+        <img src="./images/badge-android.png" alt="Google play button">
+      </div>
+    </div>
+  </div>
+</div>
 
-  Oh yeah, did we mention it's free?
+  <!-- FOOTER  -->
+  <footer>
+    <div class="footer-items">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>  
+    </div>
+    <div class="footer-items">
+      &copy; 2014 Instagram
+    </div>  
+  </footer>
 
+
+
+
+
+<!-- 
   Download on the App Store
   Get it on Google Play
 
@@ -26,6 +75,6 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
 </html>
