80% done, faltou responsive sair bem

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/lab-css-instagram-clone/starter-code/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  Instagram
+<div class="div1">
+  <img src="/lab-css-instagram-clone/starter-code/images/phones.png" alt="Phones" class="phone">
+  <div class="div-text">
+    <div class="div-logo">
+     <img src="/lab-css-instagram-clone/starter-code/images/brand.png" alt="Logo" class="logo">
+     <div class="div-home">
+     <img src="/lab-css-instagram-clone/starter-code/images/home.png" alt="Home">
+      <span class="button">Log in</span>
+    </div>
+    </div>
+    <div class="div-title">
+     <h1 class="title">Capture and Share the World's Moments</h1>
+     <h3 class="text">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</h3>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <h3 class="text"> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</h3>
+  
+      <h3 class="text"> Oh yeah, did we mention it's free?</h3>
+    </div>
+    <div class="div-store">
+     <img src="/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="App Store" class="store"> 
+     <img src="/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Google Play" class="store play">
+    </div>
+  </div>
+</div>
+<div class="last">
+    <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 </body>
 </html>
