--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -43,38 +43,24 @@
 
   <!-- FOOTER  -->
   <footer>
-    <div class="footer-items">
-      <a href="#">About Us</a>
-      <a href="#">Support</a>
-      <a href="#">Blog</a>
-      <a href="#">Press</a>
-      <a href="#">API</a>
-      <a href="#">Jobs</a>
-      <a href="#">Privacy</a>
-      <a href="#">Terms</a>  
-    </div>
-    <div class="footer-items">
+    <div id="footer-links">
+      <div class="footer-items">
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+      </div>  
+      <div class="footer-items">
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>  
+      </div>
+  </div>
+    <div id="insta-footer" class="footer-items">
       &copy; 2014 Instagram
     </div>  
   </footer>
 
-
-
-
-
-<!-- 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram -->
 </body>
 </html>
