--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="tudo">
+    <div class="top">
+      <div class="iphone">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="content">
+        <div class="head">
+          <img src="./images/brand.png" alt="logo">
+          <button>
+            <img src="./images/home.png" alt="home">
+            Log in
+          </button>
+        </div>
+        <div class="text">
+          <h2>Capture and Share<br>the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="stores">
+            <img src="./images/badge-iphone.png" alt="app store">
+            <img src="./images/badge-android.png" alt="google play">
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <a href="#">ABOUT US</a>
+      <a href="#">SUPPORT</a>
+      <a href="#">BLOG</a>
+      <a href="#">PRESS</a>
+      <a href="#">API</a>
+      <a href="#">JOBS</a>
+      <a href="#">PRIVACY</a>
+      <a href="#">TERMS</a>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
+  </div>
 </body>
 </html>
