--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,24 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0">
+  <title>InstaClone</title>
+  <link rel="stylesheet"
+    href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <main>
+    <!-- Iphone & Android Images -->
+    <img class="phones-img"
+      src="./images/phones.png"
+      alt="">
+    <!-- LOGO, CONTENT AND BADGES -->
+    <div class="global-content-container">
+      <!-- LOGO AND BTN -->
+      <div class="logo-btn-container">
+        <img src="./images/brand.png"
+          alt="Brand Image">
+        <button><img src="./images/home.png"
+            alt="home icon">Login</button>
+      </div>
+      <!-- CONTENT BOX-->
+      <div class="text-container-box">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends
+          and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <!-- BADGES IPHONE AND ANDROID -->
+        <div class="container-badges">
+          <img src="./images/badge-iphone.png"
+            alt="badge-iphone">
+          <img src="./images/badge-android.png"
+            alt="badge-android">
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- NAVIGATION MENU ITEMS -->
+  <nav class="footer-items">
+    <ul>
+      <li>About Us </li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+  </nav>
+</body>
 
-  Capture and Share the World's Moments
+</html>
+<!--   Instagram
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
+ 
+  
   Blog
   Press
   API
@@ -26,6 +70,4 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
-</body>
-</html>
+  &copy; 2014 Instagram -->
