--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <head>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <title>Instagram</title>
+    <link rel="stylesheet" href="../starter-code/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </head>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  <body>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <section class="section1">
 
-  &copy; 2014 Instagram
-</body>
+      <img src="../starter-code/images/phones.png" alt="Phones">
+
+      <main class="sec1-block-right">
+
+        <div class="sec1-top">
+          <img src="../starter-code/images/brand.png" alt="Instagram logo">
+          <button>
+            <a href="#"></a><img src="../starter-code/images/home.png" alt="Home icon">Log in</a>
+          </button>
+        </div>
+
+        <div class="sec1-mid">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p> 
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          
+        </div>
+
+        <div class="sec1-bottom">
+          <img src="../starter-code/images/badge-iphone.png" alt="Badge iPhone">
+          <img src="../starter-code/images/badge-android.png" alt="Badge Android">
+        </div> 
+
+      </main>
+      
+    </section>
+
+
+    <section class="section2"> 
+
+      <nav>
+        <ul>
+          <li><a href="#"> ABOUT US </a></li>
+          <li><a href="#"> SUPPORT </a></li>
+          <li><a href="#"> BLOG </a></li>
+          <li><a href="#"> PRESS </a></li>
+          <li><a href="#"> API </a></li>
+          <li><a href="#"> JOBS </a></li>
+          <li><a href="#"> PRIVACY </a></li>
+          <li><a href="#"> TERMS </a></li>
+        </ul>
+      </nav>
+
+      <footer>&copy; 2014 INSTRAGRAM</footer>
+
+    </section>
+
+
+  </body>
+
+  
 </html>
