--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <!-- BACKGROUND -->
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="background">
+  
+  <!-- SECTION1 -->
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section class="section1">
+      <img src="./images/phones.png" alt="phones">
+      
+      <div class="right-boxes-in-section1">
+        <nav>
+          <img src="./images/brand.png" alt="instagram logo">
+          <a href="#"><img src="./images/home.png" alt="home">Log in</a>
+        </nav>
+        <section class="section2">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </section>
+        <div class="imgs">
+          <img src="./images/badge-iphone.png" alt="App Store">
+          <img src="./images/badge-android.png" alt="Google Play">
+        </div>
+      </div>
+  </section>
 
-  Oh yeah, did we mention it's free?
+    <!-- FOOTER -->
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer>
+      <div class="column1-footer">
+        <div>About Us</div>
+        <div>Support</div>
+        <div>Blog</div>
+        <div>Press</div>
+      </div>
+      <div class="column2-footer">
+        <div>API</div>
+        <div>Jobs</div>
+        <div>Privacy</div>
+        <div>Terms</div>
+      </div>
+        <div class="copyright">&copy; 2014 Instagram</div>
+    </footer>
+  </section>
+   
 </body>
 </html>
