--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet"  href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  <section>
+    <div class="div-master">
+       <div class="phone-photo">
+         <img src="./images/phones.png" alt="phone">
+       </div>
 
-  Capture and Share the World's Moments
+       <div>
+         <nav class="nav-bar">
+           <img id="logo" src="./images/brand.png" alt="logo">
+           <div class="btn">
+              <img src="./images/home.png" alt="home-icon">
+              <button>Log In</button>
+           </div>           
+          </nav>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <div class="text">
+             <h3>Capture and Share the World's Moments</h3>
+             <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</br></br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+             </br></br>
+            Oh yeah, did we mention it's free?</p></br>
 
-  Oh yeah, did we mention it's free?
+             <div clas="badges">
+                <img src="./images/badge-iphone.png">
+                <img src="./images/badge-android.png">
+             </div>
+         </div>
+      </div>
+    </div>
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+      <div class="footer"> 
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <div>
+        <p> &copy; 2014 Instagram </p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
