--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="main-box">
+    <div class="phones">
+      <img src="images/phones.png" alt="phone">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="header-text">
+      <header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <img src="images/brand.png" alt="brand">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <button type="button">
+          <div><img id="home" src="images/home.png"></div>
+          <div>Log in</div>
+        </button>
 
-  Oh yeah, did we mention it's free?
+      </header>
 
-  Download on the App Store
-  Get it on Google Play
+      <section class="text-content">
+        <h1> Capture and Share the World's Moments</h1>
+        <article>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends
+            and
+            family.</p> 
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <div class="app-buttons">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><span id="copyright">&copy; 2014 Instagram</span></li>
+    </ul>
 
-  &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
