--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
+  <main>
+    <div class="container">
 
-  Capture and Share the World's Moments
+      <aside>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <img src="/starter-code/images/phones.png" alt="phones">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </aside>
 
-  Oh yeah, did we mention it's free?
+      <section>
 
-  Download on the App Store
-  Get it on Google Play
+        <header>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <img src="/starter-code/images/brand.png" alt="instagram logo">
 
-  &copy; 2014 Instagram
+          <button>
+            <img  src="/starter-code/images/home.png" alt="log-in">
+
+            <span>Log in</span>
+          </button>
+
+        </header>
+
+        <article>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a
+            <strong>fast</strong>,
+            <strong> beautiful</strong>
+            and
+            <strong>fun</strong>
+            way to share your life with friends and family.</p>
+
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <div id="stores">
+            <a href="http://"> <img src="/starter-code/images/badge-iphone.png" alt="apple-store"> </a>
+  
+            <a href="http://"> <img src="/starter-code/images/badge-android.png" alt="google play"> </a>
+          </div>
+          
+        </article>
+
+      </section>
+
+    </div>
+
+    <footer>
+      <a href="http://">About Us</a>
+      <a href="http://">Support</a>
+      <a href="http://">Blog</a>
+      <a href="http://">Press</a>
+      <a href="http://">API</a>
+      <a href="http://">Jobs</a>
+      <a href="http://">Privacy</a>
+      <a href="http://">Terms</a>
+
+      <span id="copy-right">&copy; 2014 Instagram</span>
+    </footer>
+  </main>
 </body>
+
 </html>
