--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -34,12 +34,16 @@
         </h1>
 
         <p>
-          Instagram is a fast, beautiful and fun way to share your life <br> with friends and family. <br>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        </p>
 
-          Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash;
-          it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+          it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
           world.
-
+        </p>
+          
+        <p>
           Oh yeah, did we mention it's free?
         </p>
 
@@ -64,7 +68,7 @@
         <li><a href="#">Jobs</a></li>
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
-        &copy; 2014 Instagram
+        <li>&copy; 2014 Instagram</li>
       </ul>
     </footer>
 
