Refined Log In button + Responsive Web Design

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,6 +7,7 @@
     <title>Instagram</title>
     <link rel="stylesheet" href="../starter-code/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   </head>
 
@@ -15,18 +16,19 @@
 
     <section class="section1">
 
-      <img src="../starter-code/images/phones.png" alt="Phones">
+      <img class="responsive-hide" src="../starter-code/images/phones.png" alt="Phones">
 
       <main class="sec1-block-right">
 
         <div class="sec1-top">
           <img src="../starter-code/images/brand.png" alt="Instagram logo">
-          <button>
-            <a href="#"></a><img src="../starter-code/images/home.png" alt="Home icon">Log in</a>
+          
+          <button class="responsive-hide">
+            <a href="#"><img src="../starter-code/images/home.png" alt="Home icon">Log in</a>
           </button>
         </div>
 
-        <div class="sec1-mid">
+        <div class="sec1-mid responsive-hide">
           <h1>Capture and Share <br> the World's Moments</h1>
           <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p> 
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
@@ -35,8 +37,9 @@
         </div>
 
         <div class="sec1-bottom">
-          <img src="../starter-code/images/badge-iphone.png" alt="Badge iPhone">
-          <img src="../starter-code/images/badge-android.png" alt="Badge Android">
+          <a href="#"><img src="../starter-code/images/badge-iphone.png" alt="Badge iPhone"></a> 
+          <br>
+          <a href="#"><img src="../starter-code/images/badge-android.png" alt="Badge Android"></a> 
         </div> 
 
       </main>
@@ -59,10 +62,9 @@
         </ul>
       </nav>
 
-      <footer>&copy; 2014 INSTRAGRAM</footer>
+      <footer> &copy; 2014 INSTRAGRAM </footer>
 
     </section>
-
 
   </body>
 
