--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,8 +5,6 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
-
   <div class="content">
     <div>
       <img src="images/phones.png" alt="">
@@ -36,14 +34,16 @@
 
   <div class="top-background"></div>
   <footer>
-    <a href="#">About Us</a>
-    <a href="#">Support</a>
-    <a href="#">Blog</a>
-    <a href="#">Press</a>
-    <a href="#">API</a>
-    <a href="#">Jobs</a>
-    <a href="#">Privacy</a>
-    <a href="#">Terms</a>
+    <div class="footer-links">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+    </div>
     <div class="trademark">
       &copy; 2014 Instagram
     </div>
