--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0">
   <title>Instagram</title>
+  <link rel="stylesheet"
+    href="./css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main>
+    <!-- PHONES -->
+    <img class="phones"
+      src="./images/phones.png"
+      alt="phones images">
+    <!-- CONTENT -->
+    <div class="global-content">
+      <!-- LOGO  -->
+      <div class="logo">
+        <img src="./images/brand.png"
+          alt="brand image">
+        <button><img src="./images/home.png"
+            alt="home button">Login</button>
+      </div>
+      <!-- CONTENT BOX-->
+      <div class="text">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends
+          and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <!-- IPHONE ANDROID -->
+        <div class="container-badges">
+          <img src="./images/badge-iphone.png"
+            alt="iphone">
+          <img src="./images/badge-android.png"
+            alt="android">
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- NAVIGATION MENU ITEMS -->
+  <nav class="footer">
+    <ul>
+      <li>About Us </li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+  </nav>
+  <p id="copyright">&copy; 2014 Instagram</p>
 </body>
+
 </html>
