--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="../lab-css-instagram-clone/styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section class = "backround-blue">
+      <img class = "images-padding phone-img" src = "../lab-css-instagram-clone/images/phones.png"/>
+      <img class = "insta-logo" src = "../lab-css-instagram-clone/images/brand.png"/>  
+      <div class = "button">
+        <img src="../lab-css-instagram-clone/images/home.png"> Log in
+      </div>
+    </section>   
+    <section class="frame-container">
+      <h1> Capture and Share </br> the World's Moments </h1>
+      <div class = "text"> Instagram is a 
+      <strong>fast</strong>,
+      <strong>beautiful</strong> and
+      <strong>fun</strong> way to share your life with
+        friends and family.</br> 
+      </div>
+      <div class = "text">
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </br>
+      </div>
+      <div class = "text">
+      Oh yeah, did we mention it's free? 
+      </div>
+      <div >
+        <img class="badges-padding" src="../lab-css-instagram-clone/images/badge-iphone.png">
+        <img class="badges-padding" src="../lab-css-instagram-clone/images/badge-android.png">
+      </div>
+    </section>  
+    <section>
+      <<footer class="footer-container">
+        <ul>
+          <li> ABOUT US </li>
+          <li> SUPPORT </li>
+          <li> BLOG </li>
+          <li> PRESS </li>
+          <li> API </li>
+          <li> JOBS </li>
+          <li> PRIVACY </li>
+          <li> TERMS </li>
+          <li class = "insta-rights"> &copy; 2014 INSTAGRAM </li>
+        </ul>
+      </footer>  
+    </section>
+       
   </body>
 </html>
