--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="/starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
+    <section class="phones-image">
+      <img src="/starter-code/images/phones.png" alt="Phones" />
+    </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <section class="box-info">
+      <div class="top-bar">
+        <img src="/starter-code/images/brand.png" alt="Logo" />
+        <button>
+          <img src="/starter-code/images/home.png" alt="Home" />
+          <a href="#">Log in</a>
+        </button>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="text">
+        <h4>Capture and Share the World's Moments</h4>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="badges">
+        <img src="/starter-code/images/badge-iphone.png" alt="iPhone Badge" />
+        <img src="/starter-code/images/badge-android.png" alt="Android Badge" />
+      </div>
+    </section>
+  </header>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><A href="#">PRESS</A></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+      <li>&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
