--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+</head>
+
+<body>
+  <header>
+    <section class="phones-image">
+      <img src="/images/phones.png" alt="Phones" />
+    </section>
+
+    <section class="box-info">
+      <div class="top-bar">
+        <img src="/images/brand.png" alt="Logo" />
+        <button>
+          <img src="/images/home.png" alt="Home" />
+          <a href="#">Log in</a>
+        </button>
+      </div>
+
+      <div class="text">
+        <h4>Capture and Share the World's Moments</h4>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div class="badges">
+        <img src="/images/badge-iphone.png" alt="iPhone Badge" />
+        <img src="/images/badge-android.png" alt="Android Badge" />
+      </div>
+    </section>
+  </header>
+
+  <footer>
+    <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><A href="#">PRESS</A></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+      <li>&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
