--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link re="styesheet" href="styles/style.css">
   </head>
   <body>
     Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
