--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="../lab-css-instagram-clone/styles/style.css">
+</head>
+
+<body>
+
+  <header>
+    <div class="logo"></div>
+    <div class="brand"></div>
+    <div class="login"> </div>
+  </header>
+
+  <main>
+
+    <div class="fondo"></div>
+    <div class="degrad"></div>
+
+    <div class="resume">
+      <div class="title">Capture and Share the World's Moments </div>
+      <div class="text">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life
+        with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        world.
+        Oh yeah, did we mention it's free?</div>
+      <div class="stores">
+        <img src="" alt="appstore">
+        <img src="" alt="googleplay">
+      </div>
+    </div>
+
+  </main>
+  <div class="mobiles">
+    <div class="android"> <img src="" alt=""></div>
+    <div class="ios"> <img src="" alt=""></div>
+  </div>
+
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copyr">&copy; 2014 Instagram</li>
+    </ul>
+
+  </footer>
+</body>
 </html>
