--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <header class="grey-background"></header>
+      <section id="core-content">
+        <div class="sideblock-left">
+          <div class="media-phone">
+            <img src="images/phones.png" alt="Instagram Phones Mockup">
+          </div>
+        </div>
+        <div class="sideblock-right">
+          <div class="top-block">
+            <div class="top-block-left">
+              <img src="images/brand.png" alt="Instagram logo">
+            </div>
+            <div class="top-block-right">
+              <a href="#" rel="nofollow" title="Log in">
+                <img src="images/home.png" alt="Home icon">
+                <span>Log in</span>
+              </a>
+            </div>
+          </div>
+          <div class="bottom-block">
+            <div class="bottom-block-text">
+              <h1 class="title">Capture and Share<br> the World's Moments</h1>
+              <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p> 
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+            <div class="store-buttons">
+              <a href="#" class="a-store" title="Download on the App Store">
+                <img src="images/badge-iphone.png" alt="Apple Store button">
+              </a>
+              <a href="#" class="g-store" title="Get it on Google Play">
+                <img src="images/badge-android.png" alt="Google Play button">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer id="home-footer">
+        <ul class="links-list">
+          <li><a href="#" title="About us">About us</a></li>
+          <li><a href="#" title="Support">Support</a></li>
+          <li><a href="#" title="Blog">Blog</a></li>
+          <li><a href="#" title="Press">Press</a></li>
+          <li><a href="#" title="API">API</a></li>
+          <li><a href="#" title="Jobs">Jobs</a></li>
+          <li><a href="#" title="Privacy">Privacy</a></li>
+          <li><a href="#" title="Terms">Terms</a></li>
+          <li class="grey">&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </main>
   </body>
 </html>
