--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/styles/style.css">
+  <title>Instagram Clone</title>
+</head>
+
+<body>
+  <main class="container">
+    <img id="phones" src="/images/phones.png" alt="Phones images">
+
+    <div class="info">
+      <div class="brand">
+        <img src="/images/brand.png" alt="Instagram Brand">
+        <button><img src="/images/home.png" alt="Home button">Log in</button>
+      </div>
+      <div class="text">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div class="buttons">
+        <img src="/images/badge-iphone.png" alt="AppStore">
+        <img src="/images/badge-android.png" alt="GoogleStores">
+      </div>
+    </div>      
+    </div>
+  </main>
+
+  <!--Instagram  I Download on the App Store Get it on Google Play About Us Support Blog Press API
+    Jobs Privacy Terms &copy; 2014 Instagram -->
+</body>
+
 </html>
