--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
 
 <body>
 
-  <header>
-    <div class="logo"></div>
-    <div class="brand"></div>
-    <div class="login"> </div>
-  </header>
-
   <main>
-
-    <div class="fondo"></div>
-    <div class="degrad"></div>
-
+    <header>
+      <div><img src="images/brand.png" alt=""></div>
+      <div class="login"><img src="images/home.png" alt="">Log in </div>
+    </header>
     <div class="resume">
-      <div class="title">Capture and Share the World's Moments </div>
+      <div class="title"><h2>Capture and Share the World's Moments </h2></div>
       <div class="text">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life
         with friends and family.
         Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
@@ -30,30 +24,32 @@
         world.
         Oh yeah, did we mention it's free?</div>
       <div class="stores">
-        <img src="" alt="appstore">
-        <img src="" alt="googleplay">
+        <img src="images/badge-iphone.png" alt="appstore">
+        <img src="images/badge-android.png" alt="googleplay">
       </div>
     </div>
-
   </main>
+
   <div class="mobiles">
-    <div class="android"> <img src="" alt=""></div>
-    <div class="ios"> <img src="" alt=""></div>
-  </div>
+    <img src="images/phones.png" alt="mobiles"> </div>
 
   <footer>
-    <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li id="copyr">&copy; 2014 Instagram</li>
-    </ul>
+    <div>
+      <ul>
+        <li><a href="#"></a>About Us</a></li>
+        <li><a href="#"></a>Support</a></li>
+        <li><a href="#"></a>Blog</a></li>
+        <li><a href="#"></a>Press</a></li>
+        <li><a href="#"></a>API</a></li>
+        <li><a href="#"></a>Jobs</a></li>
+        <li><a href="#"></a>Privacy</a></li>
+        <li><a href="#"></a>Terms</a></li>
+        <li id="copyr">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+
 
   </footer>
 </body>
+
 </html>
