--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <header></header>
+      <section class="container">
+        <div class="iphone">
+          <img src="images/phones.png" alt="iPhones">
+        </div>
+      </section>
+        <section class="content">
+          <section>
+            <ul class="logos">
+              <li><img src="images/brand.png" alt="Instagram logo"></li>
+              <li class="home"><img src="images/home.png" alt="Home icon">Log in</li>
+            </ul>
+            <section class="text">
+              <h2>Capture and Share the World's Moments</h2>
+              <article>
+                <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                  &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+              </article>
+              <div>
+                <ul class="logos">
+                  <li><img src="images/badge-iphone.png" alt="AppStore icon"></li>
+                  <li><img src="images/badge-android.png" alt="Google play icon"></li>
+                </ul>
+              </div>
+            </section>
+          </section>
+        </section>
+      <footer>
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li class="copyright">&copy; 2014 INSTAGRAM</li>
+        </ul>
+      </footer>
+    </main>
   </body>
 </html>
