Finished styling CSS

--- a/index.html
+++ b/index.html
@@ -8,35 +8,30 @@
   </head>
   <body>
     <main>
-      <header></header>
-      <section class="container">
+      <section class="iphone-section">
         <div class="iphone">
           <img src="images/phones.png" alt="iPhones">
         </div>
       </section>
-        <section class="content">
-          <section>
-            <ul class="logos">
-              <li><img src="images/brand.png" alt="Instagram logo"></li>
-              <li class="home"><img src="images/home.png" alt="Home icon">Log in</li>
-            </ul>
-            <section class="text">
-              <h2>Capture and Share the World's Moments</h2>
-              <article>
-                <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
-                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      <section>
+        <ul class="logos" id="top-logos">
+          <li><img src="images/brand.png" alt="Instagram logo"></li>
+          <li class="home"><img src="images/home.png" alt="Home icon">Log in</li>
+        </ul>
+      </section>
+      <section class="text">
+        <h2>Capture and Share the World's Moments</h2>
+        <article>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
                   &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-                <p>Oh yeah, did we mention it's free?</p>
-              </article>
-              <div>
-                <ul class="logos">
-                  <li><img src="images/badge-iphone.png" alt="AppStore icon"></li>
-                  <li><img src="images/badge-android.png" alt="Google play icon"></li>
-                </ul>
-              </div>
-            </section>
-          </section>
-        </section>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <ul class="logos">
+          <li><img src="images/badge-iphone.png" alt="AppStore icon"></li>
+          <li><img src="images/badge-android.png" alt="Google play icon"></li>
+        </ul>
+      </section>
       <footer>
         <ul>
           <li>ABOUT US</li>
